<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AuthBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="es.yepwarriors.yepwarriors.ui.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundimage"
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/desc_imagen_background" />

    <TextView
        android:id="@+id/tittle"
        style="@style/AuthTitle"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/subtittle"
        style="@style/AuthSubTitle"
        android:text="@string/App_subtittle" />

    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/txtName"
            style="@style/AuthEditText"
            android:hint="@string/username_hint">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtPassword"
            style="@style/AuthEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/txtEmail"
            style="@style/AuthEditText"
            android:hint="@string/email_registros"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <ImageView
        android:id="@+id/btnDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"
        android:contentDescription="@string/button_divider" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/AuthButton"
        android:onClick="logarse"
        android:text="@string/signup_button"
        android:layout_below="@+id/editTextLayout"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/btnDivider"
        android:layout_marginRight="0px" />

    <Button
        android:id="@+id/btnCancel"
        style="@style/AuthButton"
        android:onClick="cancel"
        android:text="@string/cancel_button"
        android:layout_below="@+id/editTextLayout"
        android:layout_toRightOf="@+id/btnDivider"
        android:layout_marginLeft="0px"
        android:nestedScrollingEnabled="true" />
</RelativeLayout>