<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.yepwarriors.yepwarriors.ui.MainActivityTabbed">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_friends"
        android:title="@string/add_friends"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/sign_out"
        android:title="@string/action_logout"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item android:id="@+id/action_camera"
        android:title="@string/option_camara"
        android:orderInCategory="400"
        android:icon="@drawable/ic_action_camera"
        app:showAsAction="ifRoom"/>
</menu>
